# diamond-price-predictor

./: README.md
ml/: Makefile  pyproject.toml
ml/docs/: mkdocs.yml
ml/docs/docs/: index.md
ml/ml/: config.py
ml/ml/data/: make_dataset.py
ml/ml/features/: build_features.py
ml/ml/modeling/: train_model.py
ml/ml/visualisation/: eda_plots.py
ml/mlruns/0/: meta.yaml
ml/mlruns/0/eece491aac924a0b8eb5a378ee1e5531/: meta.yaml
ml/mlruns/0/eece491aac924a0b8eb5a378ee1e5531/metrics/: mse  r2
ml/mlruns/0/eece491aac924a0b8eb5a378ee1e5531/outputs/m-fd3b92a1db544eedb0f19d341eea45b4/: meta.yaml
ml/mlruns/0/eece491aac924a0b8eb5a378ee1e5531/tags/: mlflow.runName  mlflow.source.name
ml/mlruns/0/models/m-fd3b92a1db544eedb0f19d341eea45b4/: meta.yaml
ml/mlruns/0/models/m-fd3b92a1db544eedb0f19d341eea45b4/artifacts/: MLmodel  conda.yaml  input_example.json  model.pkl  python_env.yaml  serving_input_example.json
ml/mlruns/0/models/m-fd3b92a1db544eedb0f19d341eea45b4/metrics/: mse  r2
ml/mlruns/0/models/m-fd3b92a1db544eedb0f19d341eea45b4/params/: ridge__alpha
ml/notebooks/exploratory/: 0.2-kraig-nb.ipynb
